# ragbench

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
datasets/: example.json
ragbench/: __init__.py  cli.py  dataset.py  metrics.py  models.py  reporter.py  retriever.py
tests/: test_dataset.py  test_metrics.py  test_retriever.py
