[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragbench"
version = "0.1.0"
description = "A CLI tool for evaluating RAG retrieval quality with standard IR metrics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Muhammad Rashid", email = "muhammadrashid4587@gmail.com" },
]
keywords = ["rag", "retrieval", "evaluation", "metrics", "ir", "information-retrieval", "ndcg", "mrr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
ragbench = "ragbench.cli:main"

[project.urls]
Homepage = "https://github.com/muhammadrashid4587/ragbench"
Repository = "https://github.com/muhammadrashid4587/ragbench"
Issues = "https://github.com/muhammadrashid4587/ragbench/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
